[project]
name = "palver-elastic-client"
version = "0.1.0"
description = "A Python elastic client with helpers"
authors = [
    {name = "EnzoRobaina",email = "enzo.robaina@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "elasticsearch[async] <=8",
    "backoff (>=2.2.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"

